# home-assistant

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .release-please-config.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  GEMINI.md  README.md  bandit.yaml  dependabot.yml  hacs.json  info.md  justfile  pyproject.toml  release-please-config.json  requirements.txt  requirements_dev.txt  sonar-project.properties
.devcontainer/: README  README.md  build.sh  devcontainer.json
.devcontainer/.ha_config/: configuration-default.yaml
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.md  feature_request.yml  issue.md
.github/instructions/: api.instructions.md  config_flow.instructions.md  configuration_yaml.instructions.md  coordinator.instructions.md  diagnostics.instructions.md  entities.instructions.md  manifest.instructions.md  python.instructions.md  repairs.instructions.md  service_actions.instructions.md  services_yaml.instructions.md  tests.instructions.md  translations.instructions.md
.github/prompts/: Add Action.prompt.md  Add Config Option.prompt.md  Add Entity Platform.prompt.md  Add Entity to Device.prompt.md  Coordinator Instructions prompt.md  Create ADR.prompt.md  Create Implementation Plan.prompt.md  Debug Coordinator Issue.prompt.md  Review Integration.prompt.md  Update Translations.prompt.md
.github/workflows/: ci.yaml  copilot-setup-steps.yml  hacs.yaml  hassfest.yaml  labels.yaml  labels.yml  linting.yaml  publish-release.yml  pyrefly.yaml  release-drafter.yml  release.yaml  tag-from-manifest.yml  validate.yml
config/: configuration.yaml
custom_components/openmotics/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  diagnostic.py  entity.py  exceptions.py  light.py  manifest.json  oauth2.py  oauth_impl.py  scene.py  sensor.py  strings.json  switch.py
custom_components/openmotics/translations/: en.json
docs/development/: API_CLIENT.md  ARCHITECTURE.md  CODESPACES.md  COPILOT_AGENT.md  DECISIONS.md
docs/user/: AUTH_CHANGED.md  GETTING_STARTED.md
schemas/json/: hacs_schema.json  icons_schema.json  manifest_schema.json  translation_schema.json
schemas/yaml/: configuration_schema.yaml  services_schema.yaml
script/: check  develop  hassfest  install-pyhaopenmotics  test  type-check  update_version.py
script/.lib/: output.sh
script/setup/: setup
scripts/: develop  install-pyhaopenmotics  pre-commit-upgrade  run-ha  setup
tests/: README.md  conftest.py  const.py  test_init.py  test_openmoticscloud.py
tests/fixtures/: login_responce.json
