[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "openmotics"
version = "0.0.0"  # Version is managed in manifest.json only
description = "Homeassistant Custom Component for Renson (Openmotics)"
readme = "README.md"
keywords = [
  "aiohttp",
  "asyncio",
  "hacs",
  "hass",
  "hass.io",
  "hassio",
  "home assistant",
  "home-assistant",
  "homeassistant",
  "integration",
  "openmotics",
  "openmotics-api",
]
license = { text = "AGPLv3" }
authors = [ { name = "Wouter Coppens", email = "wouter.coppens@gmail.com" } ]
requires-python = ">=3.13.2"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "homeassistant>=2025.12",
  # pyhaopenmotics >= "0.0.1"
]
# # Documentation = ""
urls.Changelog = "https://github.com/rensongroup/home-assistant/releases"
urls.Homepage = "https://github.com/rensongroup/home-assistant"
# # Support = ""
urls.Issues = "https://github.com/rensongroup/home-assistant/issues"
urls.Repository = "https://github.com/rensongroup/home-assistant"

[tool.setuptools]
packages = [ "custom_components.openmotics" ]

[tool.hatch]
version.path = "custom_components/openmotics/const.py"

[tool.uv]
managed = true

[tool.ruff]
# Based on https://github.com/home-assistant/core/blob/dev/pyproject.toml
required-version = ">=0.13.0"
target-version = "py313"
line-length = 120
lint.select = [
  "A001",   # Variable {name} is shadowing a Python builtin
  "ASYNC",  # flake8-async
  "B002",   # Python does not support the unary prefix increment
  "B005",   # Using .strip() with multi-character strings is misleading
  "B007",   # Loop control variable {name} not used within loop body
  "B009",   # Do not call getattr with a constant attribute value. It is not any safer than normal property access.
  "B014",   # Exception handler with duplicate exception
  "B015",   # Pointless comparison. Did you mean to assign a value? Otherwise, prepend assert or remove it.
  "B017",   # pytest.raises(BaseException) should be considered evil
  "B018",   # Found useless attribute access. Either assign it to a variable or remove it.
  "B023",   # Function definition does not bind loop variable {name}
  "B024",   # `{name}` is an abstract base class, but it has no abstract methods or properties
  "B026",   # Star-arg unpacking after a keyword argument is strongly discouraged
  "B032",   # Possible unintentional type annotation (using :). Did you mean to assign (using =)?
  "B035",   # Dictionary comprehension uses static key
  "B904",   # Use raise from to specify exception cause
  "B905",   # zip() without an explicit strict= parameter
  "BLE",
  "C",      # complexity
  "COM818", # Trailing comma on bare tuple prohibited
  "D",      # docstrings
  "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
  "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
  "E",      # pycodestyle
  "F",      # pyflakes/autoflake
  "F541",   # f-string without any placeholders
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN001", # import concentions; {name} should be imported as {asname}
  "INP",    # flake8-no-pep420
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "N804",   # First argument of a class method should be named cls
  "N805",   # First argument of a method should be named self
  "N815",   # Variable {name} in class scope should not be mixedCase
  "PERF",   # Perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-pathlib
  "PYI",    # flake8-pyi
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF005", # Consider iterable unpacking instead of concatenation
  "RUF006", # Store a reference to the return value of asyncio.create_task
  "RUF007", # Prefer itertools.pairwise() over zip() when iterating over successive pairs
  "RUF008", # Do not use mutable default values for dataclass attributes
  "RUF010", # Use explicit conversion flag
  "RUF013", # PEP 484 prohibits implicit Optional
  "RUF016", # Slice in indexed access to type {value_type} uses type {index_type} instead of an integer
  "RUF017", # Avoid quadratic list summation
  "RUF018", # Avoid assignment expressions in assert statements
  "RUF019", # Unnecessary key check before dictionary access
  "RUF020", # {never_like} | T is equivalent to T
  "RUF021", # Parenthesize a and b expressions when chaining and and or together, to make the precedence clear
  "RUF022", # Sort __all__
  "RUF023", # Sort __slots__
  "RUF024", # Do not pass mutable objects as values to dict.fromkeys
  "RUF026", # default_factory is a positional-only argument to defaultdict
  "RUF030", # print() call in assert statement is likely unintentional
  "RUF032", # Decimal() called with float literal argument
  "RUF033", # __post_init__ method with argument defaults
  "RUF034", # Useless if-else condition
  "RUF059", # unused-unpacked-variable
  "RUF100", # Unused `noqa` directive
  "RUF101", # noqa directives that use redirected rule codes
  "RUF200", # Failed to parse pyproject.toml: {message}
  "S102",   # Use of exec detected
  "S103",   # bad-file-permissions
  "S108",   # hardcoded-temp-file
  "S306",   # suspicious-mktemp-usage
  "S307",   # suspicious-eval-usage
  "S313",   # suspicious-xmlc-element-tree-usage
  "S314",   # suspicious-xml-element-tree-usage
  "S315",   # suspicious-xml-expat-reader-usage
  "S316",   # suspicious-xml-expat-builder-usage
  "S317",   # suspicious-xml-sax-usage
  "S318",   # suspicious-xml-mini-dom-usage
  "S319",   # suspicious-xml-pull-dom-usage
  "S601",   # paramiko-call
  "S602",   # subprocess-popen-with-shell-equals-true
  "S604",   # call-with-shell-equals-true
  "S608",   # hardcoded-sql-expression
  "S609",   # unix-command-wildcard-injection
  "SIM",    # flake8-simplify
  "SLF",    # flake8-self
  "SLOT",   # flake8-slots
  "T20",    # flake8-print
  "T100",   # Trace found: {name} used
  "TC",     # flake8-type-checking
  "TID",    # Tidy imports
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "UP031",  # Use format specifiers instead of percent format
  "UP032",  # Use f-string instead of `format` call
  "W",      # pycodestyle
]
lint.ignore = [
  "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
  "ASYNC109", # Async function definition with a `timeout` parameter Use `asyncio.timeout` instead
  "ASYNC110", # Use `asyncio.Event` instead of awaiting `asyncio.sleep` in a `while` loop
  "COM812",
  "COM819",
  "D202",     # No blank lines allowed after function docstring
  "D203",     # 1 blank line required before class docstring
  "D203",
  "D206",
  "D212",
  "D213",     # Multi-line docstring summary should start at the second line
  "D300",
  "D406",     # Section name should end with a newline
  "D407",     # Section name underlining
  "D417",     # Missing argument descriptions in docstring - to allow documenting only non-obvious parameters
  "E111",
  "E114",
  "E117",
  "E501",     # line too long
  "FURB116",
  "ISC001",
  "PLC1901",  # {existing} can be simplified to {replacement} as an empty string is falsey; too many false positives
  # Disabled because ruff does not understand type of __all__ generated by a function
  "PLE0605",
  "PLR0911",  # Too many return statements ({returns} > {max_returns})
  "PLR0912",  # Too many branches ({branches} > {max_branches})
  "PLR0913",  # Too many arguments to function call ({c_args} > {max_args})
  "PLR0915",  # Too many statements ({statements} > {max_statements})
  "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
  "PLW1641",  # __eq__ without __hash__
  "PLW2901",  # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "PT011",    # pytest.raises({exception}) is too broad, set the `match` parameter or use a more specific exception
  "PT018",    # Assertion should be broken down into multiple parts
  "Q",
  "RUF001",   # String contains ambiguous unicode character.
  "RUF002",   # Docstring contains ambiguous unicode character.
  "RUF003",   # Comment contains ambiguous unicode character.
  "RUF015",   # Prefer next(...) over single element slice
  "SIM102",   # Use a single if statement instead of nested if statements
  "SIM103",   # Return the condition {condition} directly
  "SIM108",   # Use ternary operator {contents} instead of if-else-block
  "SIM115",   # Use context handler for opening files
  # Moving imports into type-checking blocks can mess with pytest.patch()
  "TC001",    # Move application import {} into a type-checking block
  "TC002",    # Move third-party import {} into a type-checking block
  "TC003",    # Move standard library import {} into a type-checking block
  # Quotes for typing.cast generally not necessary, only for performance critical paths
  "TC006",    # Add quotes to type expression in typing.cast()
  "TRY003",   # Avoid specifying long messages outside the exception class
  "TRY400",   # Use `logging.exception` instead of `logging.error`
  "UP046",    # Non PEP 695 generic class
  "UP047",    # Non PEP 696 generic function
  "UP049",    # Avoid private type parameter names
  # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
]
lint.per-file-ignores."script/*" = [
  "INP001", # Implicit namespace package (scripts are not a package)
  "T20",    # print() allowed in scripts
]
lint.per-file-ignores."tests/*" = [
  "D",       # Docstrings not required in tests
  "PLR2004", # Magic values are fine in tests
  "PTH",     # Use pathlib - temporary exemption for tests
  "S101",    # assert is fine in tests
]
lint.flake8-import-conventions.extend-aliases."homeassistant.helpers.config_validation" = "cv"
lint.flake8-import-conventions.extend-aliases."homeassistant.helpers.device_registry" = "dr"
lint.flake8-import-conventions.extend-aliases."homeassistant.helpers.entity_registry" = "er"
lint.flake8-import-conventions.extend-aliases."homeassistant.util.dt" = "dt_util"
# Commonly used Home Assistant imports
lint.flake8-import-conventions.extend-aliases.voluptuous = "vol"
lint.flake8-pytest-style.fixture-parentheses = false
lint.flake8-pytest-style.mark-parentheses = false
lint.flake8-tidy-imports.banned-api.async_timeout.msg = "use asyncio.timeout instead"
lint.flake8-tidy-imports.banned-api.pytz.msg = "use zoneinfo instead"
lint.flake8-tidy-imports.banned-api.tests.msg = "You should not import tests"
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "custom_components", "homeassistant" ]
lint.isort.split-on-trailing-comma = false
lint.mccabe.max-complexity = 25
lint.pydocstyle.convention = "google"
lint.pydocstyle.property-decorators = [ "propcache.api.cached_property" ]
lint.pyupgrade.keep-runtime-typing = true

[tool.pyrefly]
project-includes = [ "custom_components/openmotics" ]
project-excludes = [ "examples", "tests" ]
infer-with-first-use = false
errors.bad-argument-type = "ignore"
errors.bad-override = "ignore"

[tool.pyright]
include = [ "custom_components/openmotics" ]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.git",
  "**/.github",
  "**/docs",
  "**/venv",
  "**/.venv",
  "**/config",
]
# venvPath is relative to workspace root. A symlink is created by script/setup/bootstrap
# This works in VSCode (uses .local/ha-venv) and GitHub Actions (uses active venv)
venvPath = ".local"
venv = "ha-venv"
typeCheckingMode = "basic"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportUnusedCoroutine = "none"
reportMissingTypeStubs = "none"
