[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "openmotics"
version = "0.0.0"  # Version is managed in manifest.json only
description = "Homeassistant Custom Component for Renson (Openmotics)"
readme = "README.md"
keywords = [
  "aiohttp",
  "asyncio",
  "hacs",
  "hass",
  "hass.io",
  "hassio",
  "home assistant",
  "home-assistant",
  "homeassistant",
  "integration",
  "openmotics",
  "openmotics-api",
]
license = { text = "AGPLv3" }
authors = [ { name = "Wouter Coppens", email = "wouter.coppens@gmail.com" } ]
requires-python = ">=3.13.2"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "homeassistant>=2025.12",
  # pyhaopenmotics >= "0.0.1"
]
# # Documentation = ""
urls.Changelog = "https://github.com/rensongroup/home-assistant/releases"
urls.Homepage = "https://github.com/rensongroup/home-assistant"
# # Support = ""
urls.Issues = "https://github.com/rensongroup/home-assistant/issues"
urls.Repository = "https://github.com/rensongroup/home-assistant"

[tool.setuptools]
packages = [ "custom_components.openmotics" ]

[tool.hatch]
version.path = "custom_components/openmotics/const.py"

[tool.uv]
managed = true

[tool.ruff]
# Based on https://github.com/home-assistant/core/blob/dev/pyproject.toml
required-version = ">=0.13.0"
target-version = "py313"
line-length = 120
src = [ "custom_components/homeassistant" ]
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN001",  # Missing type annotation for function argument
  "ANN401",  # Opiniated warning on disallowing dynamically typed expressions
  "ARG002",  # used method argument: `kwargs`
  # Formatter conflicts
  "COM812",
  "COM819",
  "D203",    # Conflicts with other rules
  "D206",
  "D213",    # Conflicts with other rules
  "E501",
  "ERA001",  # Found commented-out code
  # To double verify
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT003",  # Boolean positional value in function call
  "FIX002",
  "ISC001",
  "N818",    # Exception name `OpenMoticsException` should be named with an Error suffix
  "PGH003",  # Use specific rule codes when ignoring type issues
  "PLR0911", # Too many return statements (8 > 6)
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "RUF012",  # Just broken
  "TC001",   # Move application import `homeassistant.core.HomeAssistant` into a type-checking block
  # Related to TODO
  "TD002",
  "TD003",
  "TID252",  # Relative imports
  "TRY300",  # Consider moving this statement to an `else` block
  "TRY400",  # Use `logging.exception` instead of `logging.error`"
  "W191",
]
# Allow relative imports within auth and within components
lint.per-file-ignores."custom_components/openmotics/*" = [ "TID252" ]
# Allow for main entry & scripts to write to stdout
lint.per-file-ignores."script/*" = [ "T20" ]
lint.flake8-import-conventions.extend-aliases."homeassistant.helpers.area_registry" = "ar"
lint.flake8-import-conventions.extend-aliases."homeassistant.helpers.config_validation" = "cv"
lint.flake8-import-conventions.extend-aliases."homeassistant.helpers.device_registry" = "dr"
lint.flake8-import-conventions.extend-aliases."homeassistant.helpers.entity_registry" = "er"
lint.flake8-import-conventions.extend-aliases."homeassistant.helpers.issue_registry" = "ir"
lint.flake8-import-conventions.extend-aliases.voluptuous = "vol"
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "homeassistant" ]

[tool.pylint]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
"MESSAGES CONTROL".disable = [
  "abstract-method",
  "duplicate-code",
  "format",
  "unexpected-keyword-arg",
  "used-before-assignment",
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.norecursedirs = [ ".git", "testing_config" ]
ini_options.log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
ini_options.log_date_format = "%Y-%m-%d %H:%M:%S"
ini_options.asyncio_debug = true
ini_options.asyncio_mode = "auto"
ini_options.asyncio_default_fixture_loop_scope = "function"
ini_options.addopts = "-ra -q --strict-markers"
ini_options.markers = [
  "unit: Unit tests (fast, no external dependencies)",
  "integration: Integration tests (may use coordinator/time service)",
]
ini_options.filterwarnings = [
  # Treat warnings as errors to catch issues early
  "error",
  # Ignore specific warnings from third-party libraries as needed
  # "ignore:.*custom_components.* is using deprecated.*:DeprecationWarning",
]

[tool.coverage]
run.omit = [ "tests/*" ]
run.source = [ "custom_components/openmotics" ]
report.exclude_lines = [
  "@overload",
  "def __repr__",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.pyrefly]
project-includes = [ "custom_components/openmotics" ]
project-excludes = [ "examples", "tests" ]
infer-with-first-use = false
errors.bad-argument-type = "ignore"
errors.bad-override = "ignore"

[tool.pyright]
include = [ "custom_components/openmotics" ]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.git",
  "**/.github",
  "**/docs",
  "**/venv",
  "**/.venv",
  "**/config",
]
# venvPath is relative to workspace root. A symlink is created by script/setup/bootstrap
# This works in VSCode (uses .local/ha-venv) and GitHub Actions (uses active venv)
venvPath = ".local"
venv = "ha-venv"
typeCheckingMode = "basic"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportUnusedCoroutine = "none"
reportMissingTypeStubs = "none"
